crates/eventric-domain/tests/ui/action_unknown_key.stderr
error: unknown key `oops`; expected `projections`
 --> tests/ui/action_unknown_key.rs:4:10
  |
4 | #[action(oops: { p: X::new() })]
  |          ^^^^
