crates/eventric-domain/tests/ui/action_unknown_key.rs
use eventric_domain::action::Action;

#[derive(Action)]
#[action(oops: { p: X::new() })]
struct Bar;

fn main() {}
